classDiagram

direction RL

namespace gestion_rh{
class Apprenant
class Formateur 
}




namespace gestion_authentifications {
  class Projet {
    id: int
    nom: string
    description: string
    objectifs: string
    dateDebut: date
    dateEcheance: date
    statut: string
  }

  class Tache {
    id: int
    nom: string
    description: string
    priorité: string
    dateÉchéance: date
    statut: string
    assigné: User
    projet: Projet
    sous-tâches: Tâche[]
  }

  class statutProjetTache{
    id: int
    nom: string
    description: string
  }

}

namespace gestion_technologies{
class Technologie 
}

namespace gestion_competences {
class NiveauCompetence
}







Projet "1" --> "*" Formateur
Projet "1" --> "*" Tache
Tache "*" --> "*" Apprenant 
Projet "*" --> "*" Apprenant : "participants"
Projet "*" --> "*" Technologie
Tache "*" --> "1" NiveauCompetence
Tache "*" --> "*" Technologie
Projet "*" --> "1" statutProjetTache
Tache "*" --> "1" statutProjetTache